--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ langchain-postgres==0.0.12
 pydantic-settings==2.7.1
 httpx==0.28.1
 pandas
+autogen[graphs]==0.7.4
+matplotlib==3.10.0
+autogen-agentchat[graph]==0.4.6
+networkx==3.4.2
